--- a/index.html
+++ b/index.html
@@ -106,9 +106,11 @@
                         document.getElementById("authors").value = (volumeInfo.authors || []).join(', ');
                         document.getElementById("publishedDate").value = volumeInfo.publishedDate || '';
                         document.getElementById("pageCount").value = volumeInfo.pageCount || '';
-                         const imageUrl = volumeInfo.imageLinks ? volumeInfo.imageLinks.thumbnail : 'https://via.placeholder.com/150';
-                        document.getElementById("imagePlace").src = volumeInfo.imageLinks ? volumeInfo.imageLinks.thumbnail : '';
-                        document.getElementById("imageSrc").value = volumeInfo.imageLinks ? volumeInfo.imageLinks.thumbnail : '';
+
+                        // 画像URLが存在する場合はそれを使用し、存在しない場合はデフォルト画像を設定
+                        const imageUrl = volumeInfo.imageLinks ? volumeInfo.imageLinks.thumbnail : 'https://via.placeholder.com/150';
+                        document.getElementById("imagePlace").src = imageUrl;
+                        document.getElementById("imageSrc").value = imageUrl;
                     } else {
                         alert("書籍データが見つかりませんでした。");
                     }
