--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 </head>
 <body>
     <div><canvas id="preview"></canvas></div>
+    <textarea id="jan" rows="0" cols="0"></textarea>
     <form method="post" name="form" target="dummy" action="">
         <fieldset>
             <div class="container">
