--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             const pageCount = document.getElementById('pageCount').value;
             const imageUrl = document.getElementById('imageUrl').value;
 
-            const url = 'YOUR_DEPLOYED_WEB_APP_URL'; // Google Apps Script の Web アプリ URL
+            const url = 'https://script.google.com/macros/s/AKfycbwn6eO-9KAgTEx06TPEF19ZSxsuDSJ_1nygOQzH6GetAqnAkt7G8IzuUbuxYjpwjBU/exec'; // Google Apps Script の Web アプリ URL
 
             const response = await fetch(`${url}?isbn=${encodeURIComponent(isbn)}&title=${encodeURIComponent(title)}&subtitle=${encodeURIComponent(subtitle)}&authors=${encodeURIComponent(authors)}&publishedDate=${encodeURIComponent(publishedDate)}&pageCount=${encodeURIComponent(pageCount)}&imageUrl=${encodeURIComponent(imageUrl)}`);
             const result = await response.text();
