--- a/index.html
+++ b/index.html
@@ -3,31 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send Data to Notion</title>
+    <title>データをNotionに送信</title>
     <script src="./quagga.min.js"></script>
+    <style>
+        #barcode-scanner {
+            width: 100%;
+            height: 300px;
+            border: 1px solid black;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Send Book Data</h1>
+    <h1>書籍データの送信</h1>
     <form id="bookForm">
         <label>ISBN:</label>
         <input type="text" id="isbn" required><br>
-        <label>Title:</label>
+        <label>タイトル:</label>
         <input type="text" id="title" required><br>
-        <label>Subtitle:</label>
+        <label>サブタイトル:</label>
         <input type="text" id="subtitle"><br>
-        <label>Authors:</label>
+        <label>著者:</label>
         <input type="text" id="authors"><br>
-        <label>Published Date:</label>
+        <label>出版日:</label>
         <input type="text" id="publishedDate"><br>
-        <label>Page Count:</label>
+        <label>ページ数:</label>
         <input type="text" id="pageCount"><br>
-        <label>Image URL:</label>
+        <label>画像URL:</label>
         <input type="text" id="imageUrl"><br>
-        <button type="button" onclick="sendData()">Send Data</button>
+        <button type="button" onclick="sendData()">データ送信</button>
     </form>
 
+    <div id="barcode-scanner"></div>
+
     <script>
-        async function sendData() {
+        // QuaggaJSの初期化
+        function startScanner() {
+            Quagga.init({
+                inputStream: {
+                    name: "Live",
+                    type: "LiveStream",
+                    target: document.querySelector('#barcode-scanner') // スキャン表示エリア
+                },
+                decoder: {
+                    readers: ["ean_reader"] // 対応するバーコードリーダーの種類
+                }
+            }, function(err) {
+                if (err) {
+                    console.log(err);
+                    return;
+                }
+                Quagga.start();
+            });
+
+            Quagga.onDetected(function(data) {
+                document.getElementById('isbn').value = data.codeResult.code;
+                Quagga.stop();
+            });
+        }
+
+        function sendData() {
             const isbn = document.getElementById('isbn').value;
             const title = document.getElementById('title').value;
             const subtitle = document.getElementById('subtitle').value;
@@ -36,12 +71,19 @@
             const pageCount = document.getElementById('pageCount').value;
             const imageUrl = document.getElementById('imageUrl').value;
 
-            const url = 'https://script.google.com/macros/s/AKfycbwn6eO-9KAgTEx06TPEF19ZSxsuDSJ_1nygOQzH6GetAqnAkt7G8IzuUbuxYjpwjBU/exec'; // Google Apps Script の Web アプリ URL
+            // Google Apps ScriptのURLは削除し、Notionに対応したAPIに置き換えてください
+            const url = 'https://api.notion.com/v1/pages'; 
 
-            const response = await fetch(`${url}?isbn=${encodeURIComponent(isbn)}&title=${encodeURIComponent(title)}&subtitle=${encodeURIComponent(subtitle)}&authors=${encodeURIComponent(authors)}&publishedDate=${encodeURIComponent(publishedDate)}&pageCount=${encodeURIComponent(pageCount)}&imageUrl=${encodeURIComponent(imageUrl)}`);
-            const result = await response.text();
-            alert(result);
+            fetch(`${url}?isbn=${encodeURIComponent(isbn)}&title=${encodeURIComponent(title)}&subtitle=${encodeURIComponent(subtitle)}&authors=${encodeURIComponent(authors)}&publishedDate=${encodeURIComponent(publishedDate)}&pageCount=${encodeURIComponent(pageCount)}&imageUrl=${encodeURIComponent(imageUrl)}`)
+                .then(response => response.text())
+                .then(result => alert(result))
+                .catch(error => console.error('Error:', error));
         }
+
+        // ページ読み込み時にスキャナーを開始
+        document.addEventListener('DOMContentLoaded', (event) => {
+            startScanner();
+        });
     </script>
 </body>
 </html>
