--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
 
     <div id="form-container">
         <form id="bookForm">
-            <label>ISBN:</label>
+            <label for="isbn">ISBN:</label>
             <input type="text" id="isbn" required><br>
-            <label>タイトル:</label>
+            <label for="title">タイトル:</label>
             <input type="text" id="title" required><br>
-            <label>サブタイトル:</label>
+            <label for="subtitle">サブタイトル:</label>
             <input type="text" id="subtitle"><br>
-            <label>著者:</label>
+            <label for="authors">著者:</label>
             <input type="text" id="authors"><br>
-            <label>出版日:</label>
+            <label for="publishedDate">出版日:</label>
             <input type="text" id="publishedDate"><br>
-            <label>ページ数:</label>
+            <label for="pageCount">ページ数:</label>
             <input type="text" id="pageCount"><br>
-            <label>画像URL:</label>
+            <label for="imageUrl">画像URL:</label>
             <input type="text" id="imageUrl"><br>
             <button type="button" onclick="sendData()">データ送信</button>
         </form>
