--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>バーコードスキャンとデータ送信</title>
+    <title>カメラスキャンとデータ送信</title>
     <script src="./quagga.min.js"></script>
     <style>
         body {
@@ -13,31 +13,31 @@
             padding: 20px;
             margin: 0;
             font-family: Arial, sans-serif;
-            box-sizing: border-box; /* 全体のボックスサイズを調整 */
+            box-sizing: border-box;
         }
 
         #barcode-scanner {
             width: 100%;
-            max-width: 600px;
-            height: 300px;
+            max-width: 640px;
+            height: 480px;
             border: 1px solid black;
-            margin-bottom: 20px; /* カメラの下にフォームを配置するための余白 */
-            overflow: hidden; /* はみ出る部分を隠す */
-            position: relative; /* 子要素を相対位置にするための設定 */
+            margin-bottom: 20px;
+            overflow: hidden;
+            position: relative;
         }
 
         #barcode-scanner video {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* 画像のアスペクト比を保ちながらサイズを調整 */
+            object-fit: cover;
         }
 
         #form-container {
             width: 100%;
-            max-width: 600px;
+            max-width: 640px;
             display: flex;
             flex-direction: column;
-            gap: 10px; /* フォームの各要素間にスペースを確保 */
+            gap: 10px;
         }
 
         #form-container input, #form-container button {
@@ -58,19 +58,19 @@
 
         textarea {
             width: 100%;
-            max-width: 600px;
+            max-width: 640px;
             height: 150px;
             margin-top: 20px;
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 4px;
             box-sizing: border-box;
-            resize: none; /* テキストエリアのサイズ変更を禁止 */
+            resize: none;
         }
     </style>
 </head>
 <body>
-    <h1>書籍データの送信</h1>
+    <h1>カメラスキャンとデータ送信</h1>
 
     <div id="barcode-scanner">
         <video id="video" autoplay></video>
@@ -103,28 +103,72 @@
         let DetectedCode = '';
         let DetectedCount = 0;
 
-        function startScanner() {
-            Quagga.init({
-                inputStream: {
-                    name: "Live",
-                    type: "LiveStream",
-                    target: video // スキャン表示エリア
-                },
-                decoder: {
-                    readers: ["ean_reader"] // 対応するバーコードリーダーの種類
-                }
-            }, function(err) {
-                if (err) {
-                    console.log(err);
-                    return;
-                }
-                Quagga.start();
-            });
+        async function startCamera() {
+            try {
+                const stream = await navigator.mediaDevices.getUserMedia({
+                    audio: false,
+                    video: {
+                        facingMode: "environment",
+                        width: { ideal: 640 },
+                        height: { ideal: 480 }
+                    }
+                });
+                video.srcObject = stream;
+                // ストリームが準備できたらスキャンを開始する
+                setTimeout(Scan, 500, true);
+            } catch (error) {
+                console.error("カメラにアクセスできません:", error);
+                document.getElementById('jan').value += error + '\n';
+            }
+        }
 
-            Quagga.onDetected(function(data) {
-                document.getElementById('isbn').value = data.codeResult.code;
-                Quagga.stop();
+        function Scan(first) {
+            if (first) {
+                //選択された幅高さ
+                w = video.videoWidth;
+                h = video.videoHeight;
+                //画面上の表示サイズ
+                prev.style.width = (w / 2) + "px";
+                prev.style.height = (h / 2) + "px";
+                //内部のサイズ
+                prev.setAttribute("width", w);
+                prev.setAttribute("height", h);
+                mw = w * 0.5;
+                mh = w * 0.2;
+                x1 = (w - mw) / 2;
+                y1 = (h - mh) / 2;
+            }
+            prev_ctx.drawImage(video, 0, 0, w, h);
+            prev_ctx.beginPath();
+            prev_ctx.strokeStyle = "rgb(255,0,0)";
+            prev_ctx.lineWidth = 2;
+            prev_ctx.rect(x1, y1, mw, mh);
+            prev_ctx.stroke();
+            tmp.setAttribute("width", mw);
+            tmp.setAttribute("height", mh);
+            tmp_ctx.drawImage(prev, x1, y1, mw, mh, 0, 0, mw, mh);
+            
+            tmp.toBlob(function (blob) {
+                let reader = new FileReader();
+                reader.onload = function () {
+                    let config = {
+                        decoder: {
+                            readers: ["ean_reader", "ean_8_reader"],
+                            multiple: false,
+                        },
+                        locator: { patchSize: "large", halfSample: false },
+                        locate: false,
+                        src: reader.result,
+                    };
+                    Quagga.decodeSingle(config, function (result) {
+                        if (result && result.codeResult) {
+                            Quagga.onDetected(result);
+                        }
+                    });
+                }
+                reader.readAsDataURL(blob);
             });
+            setTimeout(Scan, 500, false);
         }
 
         function sendData() {
@@ -136,7 +180,6 @@
             const pageCount = document.getElementById('pageCount').value;
             const imageUrl = document.getElementById('imageUrl').value;
 
-            // Google Apps ScriptのWebアプリURL
             const scriptUrl = 'YOUR_DEPLOYED_WEB_APP_URL';
 
             fetch(scriptUrl, {
@@ -164,10 +207,7 @@
             });
         }
 
-        // ページ読み込み時にスキャナーを開始
-        document.addEventListener('DOMContentLoaded', (event) => {
-            startScanner();
-        });
+        document.addEventListener('DOMContentLoaded', startCamera);
     </script>
 </body>
 </html>
