--- a/index.html
+++ b/index.html
@@ -16,20 +16,26 @@
             box-sizing: border-box;
         }
 
-        #barcode-scanner {
+        #camera-container {
+            position: relative;
             width: 100%;
             max-width: 640px;
             height: 480px;
-            border: 1px solid black;
             margin-bottom: 20px;
-            overflow: hidden;
-            position: relative;
         }
 
-        #barcode-scanner video {
+        #barcode-scanner video,
+        #barcode-scanner canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+        }
+
+        #barcode-scanner canvas {
+            border: 2px solid red; /* 枠線のスタイル */
+            box-sizing: border-box; /* 枠線を含めたサイズ調整 */
         }
 
         #form-container {
@@ -72,8 +78,11 @@
 <body>
     <h1>カメラスキャンとデータ送信</h1>
 
-    <div id="barcode-scanner">
-        <video id="video" autoplay></video>
+    <div id="camera-container">
+        <div id="barcode-scanner">
+            <video id="video" autoplay></video>
+            <canvas id="canvas"></canvas>
+        </div>
     </div>
 
     <div id="form-container">
@@ -100,6 +109,8 @@
 
     <script>
         let video = document.getElementById('video');
+        let canvas = document.getElementById('canvas');
+        let ctx = canvas.getContext('2d');
         let DetectedCode = '';
         let DetectedCount = 0;
 
@@ -114,8 +125,12 @@
                     }
                 });
                 video.srcObject = stream;
-                // ストリームが準備できたらスキャンを開始する
-                setTimeout(Scan, 500, true);
+                video.onloadedmetadata = () => {
+                    video.play();
+                    canvas.width = video.videoWidth;
+                    canvas.height = video.videoHeight;
+                    setTimeout(Scan, 500, true);
+                };
             } catch (error) {
                 console.error("カメラにアクセスできません:", error);
                 document.getElementById('jan').value += error + '\n';
@@ -124,50 +139,21 @@
 
         function Scan(first) {
             if (first) {
-                //選択された幅高さ
-                w = video.videoWidth;
-                h = video.videoHeight;
-                //画面上の表示サイズ
-                prev.style.width = (w / 2) + "px";
-                prev.style.height = (h / 2) + "px";
-                //内部のサイズ
-                prev.setAttribute("width", w);
-                prev.setAttribute("height", h);
-                mw = w * 0.5;
-                mh = w * 0.2;
-                x1 = (w - mw) / 2;
-                y1 = (h - mh) / 2;
+                // 初回のみ、サイズと位置を設定する
+                canvas.width = video.videoWidth;
+                canvas.height = video.videoHeight;
             }
-            prev_ctx.drawImage(video, 0, 0, w, h);
-            prev_ctx.beginPath();
-            prev_ctx.strokeStyle = "rgb(255,0,0)";
-            prev_ctx.lineWidth = 2;
-            prev_ctx.rect(x1, y1, mw, mh);
-            prev_ctx.stroke();
-            tmp.setAttribute("width", mw);
-            tmp.setAttribute("height", mh);
-            tmp_ctx.drawImage(prev, x1, y1, mw, mh, 0, 0, mw, mh);
-            
-            tmp.toBlob(function (blob) {
-                let reader = new FileReader();
-                reader.onload = function () {
-                    let config = {
-                        decoder: {
-                            readers: ["ean_reader", "ean_8_reader"],
-                            multiple: false,
-                        },
-                        locator: { patchSize: "large", halfSample: false },
-                        locate: false,
-                        src: reader.result,
-                    };
-                    Quagga.decodeSingle(config, function (result) {
-                        if (result && result.codeResult) {
-                            Quagga.onDetected(result);
-                        }
-                    });
-                }
-                reader.readAsDataURL(blob);
-            });
+
+            // ビデオフレームをキャンバスに描画
+            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+            // 枠線を描画
+            ctx.beginPath();
+            ctx.strokeStyle = "rgb(255,0,0)";
+            ctx.lineWidth = 2;
+            ctx.rect(0, 0, canvas.width, canvas.height);
+            ctx.stroke();
+
             setTimeout(Scan, 500, false);
         }
 
