--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>カメラスキャンとデータ送信</title>
-    <script src="./quagga.min.js"></script>
     <style>
         body {
             display: flex;
@@ -13,7 +12,6 @@
             padding: 20px;
             margin: 0;
             font-family: Arial, sans-serif;
-            box-sizing: border-box;
         }
 
         #camera-container {
@@ -22,6 +20,12 @@
             max-width: 640px;
             height: 480px;
             margin-bottom: 20px;
+        }
+
+        #barcode-scanner {
+            position: relative;
+            width: 100%;
+            height: 100%;
         }
 
         #barcode-scanner video,
@@ -35,7 +39,7 @@
 
         #barcode-scanner canvas {
             border: 2px solid red; /* 枠線のスタイル */
-            box-sizing: border-box; /* 枠線を含めたサイズ調整 */
+            box-sizing: border-box;
         }
 
         #form-container {
@@ -111,8 +115,6 @@
         let video = document.getElementById('video');
         let canvas = document.getElementById('canvas');
         let ctx = canvas.getContext('2d');
-        let DetectedCode = '';
-        let DetectedCount = 0;
 
         async function startCamera() {
             try {
@@ -139,7 +141,6 @@
 
         function Scan(first) {
             if (first) {
-                // 初回のみ、サイズと位置を設定する
                 canvas.width = video.videoWidth;
                 canvas.height = video.videoHeight;
             }
@@ -151,7 +152,7 @@
             ctx.beginPath();
             ctx.strokeStyle = "rgb(255,0,0)";
             ctx.lineWidth = 2;
-            ctx.rect(0, 0, canvas.width, canvas.height);
+            ctx.rect(50, 50, canvas.width - 100, canvas.height - 100); // 枠線の位置とサイズ
             ctx.stroke();
 
             setTimeout(Scan, 500, false);
