--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             }
 
             // ビデオフレームをキャンバスに描画
+            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
             
-
             // 枠線を描画
             ctx.beginPath();
             ctx.strokeStyle = "rgb(255,0,0)";
