--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             height: 100%;
         }
 
-        
+         #barcode-scanner canvas {
+            border: 2px solid ; /* 枠線のスタイル */
+            box-sizing: border-box;
+        }
 
         #form-container {
             width: 100%;
