--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             const pageCount = document.getElementById('pageCount').value;
             const imageUrl = document.getElementById('imageUrl').value;
 
-            const scriptUrl = 'YOUR_DEPLOYED_WEB_APP_URL';
+            const scriptUrl = 'https://script.google.com/macros/s/AKfycbwn6eO-9KAgTEx06TPEF19ZSxsuDSJ_1nygOQzH6GetAqnAkt7G8IzuUbuxYjpwjBU/exec';
 
             fetch(scriptUrl, {
                 method: 'POST',
